# PurePursuitControllerROS

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: pure_pursuit_controller.yaml
include/curio_navigation/: PurePursuitController.h
launch/: pure_pursuit.launch  test_send_waypoints.launch
rviz/: default.rviz
scripts/: show_trajectory.py  test_send_ref_path.py
src/: PurePursuitController.cpp  PurePursuitControllerNode.cpp
wp/: path.txt
